bootstrap/nexus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  labels:
    app.kubernetes.io/name: nexus
